# cproj

./: .clang-format  .clang-tidy  CMakeLists.txt
source/: main.c
src/: main.c
